--- a/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
+++ b/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallMouse.cs" />
     <EmbeddedResource Include="FormHouse.resx">
       <DependentUpon>FormHouse.cs</DependentUpon>
     </EmbeddedResource>
