--- a/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
+++ b/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmallMouse.cs" />
+    <Compile Include="Sparkles.cs" />
     <EmbeddedResource Include="FormHouse.resx">
       <DependentUpon>FormHouse.cs</DependentUpon>
     </EmbeddedResource>
