--- a/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
+++ b/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <Compile Include="Animation.cs" />
     <Compile Include="BigMouse.cs" />
+    <Compile Include="FormDeath.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDeath.Designer.cs">
+      <DependentUpon>FormDeath.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormHouse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     <Compile Include="Rug.cs" />
     <Compile Include="SmallMouse.cs" />
     <Compile Include="Sparkles.cs" />
+    <EmbeddedResource Include="FormDeath.resx">
+      <DependentUpon>FormDeath.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormHouse.resx">
       <DependentUpon>FormHouse.cs</DependentUpon>
     </EmbeddedResource>
@@ -246,6 +255,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\deathscreen.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
