death screen is kinda there and there is now an age n name on the start screen

--- a/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
+++ b/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
@@ -67,6 +67,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Rug.cs" />
     <Compile Include="SmallMouse.cs" />
     <Compile Include="Sparkles.cs" />
@@ -81,14 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="bin\Debug\Mice in the Hice.exe.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -258,6 +258,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\deathscreen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\menu button.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
