--- a/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
+++ b/Mice in the Hice/Mice in the Hice/Mice in the Hice.csproj
@@ -53,6 +53,12 @@
     <Compile Include="FormDeath.Designer.cs">
       <DependentUpon>FormDeath.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormHard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHard.Designer.cs">
+      <DependentUpon>FormHard.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormHouse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     <Compile Include="Sparkles.cs" />
     <EmbeddedResource Include="FormDeath.resx">
       <DependentUpon>FormDeath.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormHard.resx">
+      <DependentUpon>FormHard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormHouse.resx">
       <DependentUpon>FormHouse.cs</DependentUpon>
